--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "matrix-js-sdk": "^9.1.0",
     "vue": "^2.6.11",
     "ws": "^7.3.1"
   },
