--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@modular-matrix/parse-mxc": "^1.0.1",
     "core-js": "^3.6.5",
     "matrix-js-sdk": "^9.1.0",
     "sass": "^1.29.0",
