--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@modular-matrix/parse-mxc": "^1.0.1",
+    "@vue-polkadot/vue-identicon": "^0.0.8",
     "core-js": "^3.6.5",
+    "jdenticon": "^3.1.0",
     "matrix-js-sdk": "^9.1.0",
     "sass": "^1.29.0",
     "v-emoji-picker": "^2.3.1",
