--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jdenticon": "^3.1.0",
     "matrix-js-sdk": "^9.1.0",
     "sass": "^1.29.0",
+    "superagent": "^6.1.0",
     "v-emoji-picker": "^2.3.1",
     "vue": "^2.6.11",
     "ws": "^7.3.1"
