--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^2.4.7",
+    "@capacitor/cli": "^2.4.7",
+    "@capacitor/core": "^2.4.7",
     "@modular-matrix/parse-mxc": "^1.0.1",
     "@vue-polkadot/vue-identicon": "^0.0.8",
     "core-js": "^3.6.5",
