--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.5.0",
     "node-sass": "^5.0.0",
+    "recorder-js": "*",
     "sass-loader": "^10.1.1",
     "vue-router": "^3.4.9",
     "vue-template-compiler": "^2.6.11"
